k8s/namespaces/minecraft/02-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-lb
  namespace: minecraft
  annotations:
    external-dns.alpha.kubernetes.io/hostname: minecraft-svc.k8s.pulsifer.dev.
  labels:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/part-of: minecraft
spec:
  type: LoadBalancer
  ports:
    - port: 25565
      protocol: TCP
      name: minecraft
      #  - port: 25565
      #  - protocol: UDP
      #  - name: minecraft-data
      #  - port: 19132
      #  - protocol: UDP
      #  - name: minecraft-19132
      #  - port: 19133
      #  - protocol: UDP
      #  - name: minecraft-19133
  selector:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/part-of: minecraft
