k8s/namespaces/minecraft/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/part-of: minecraft

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: minecraft
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
